--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
   "name": "plugin-node-data-inheritance",
-  "version": "1.0.0-alpha",
+  "version": "2.0.0",
   "description": "Custom data inheritance plugin for Patternlab",
+  "keywords": [
+    "patternlab",
+    "data.json",
+    "inheritance",
+    "@pattern-lab",
+    "plugin"
+  ],
   "main": "index.js",
-  "devDependencies": {
-    "patternlab-node": "^2.12.0"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/749/plugin-node-data-inheritance.git"
   },
   "scripts": {
+    "test": "standard",
     "postinstall": "node ./postinstall.js"
   },
   "author": "David Emanuelsen",
+  "contributors": [{
+    "name": "Jan Giesenberg"
+  }],
   "license": "MIT",
-  "homepage": "https://github.com/749/plugin-node-data-inheritance#readme"
+  "bugs": "https://github.com/749/plugin-node-faker/issues",
+  "homepage": "https://github.com/749/plugin-node-data-inheritance#readme",
+  "@pattern-lab-plugin": {
+    "name": "@pattern-lab/plugin-node-data-inheritance",
+    "safeName": "@pattern-lab-plugin-node-data-inheritance"
+  },
+  "dependencies": {
+    "@pattern-lab/core": "^5.9.0",
+    "fs-extra": "^9.0.0",
+    "glob": "^7.1.6",
+    "merge-deep": "^3.0.2"
+  },
+  "devDependencies": {
+    "standard": "*"
+  },
+  "engines": {
+    "node": ">=10.10"
+  }
 }
