--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@g749/plugin-node-data-inheritance",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Custom data inheritance plugin for Patternlab",
   "main": "index.js",
   "devDependencies": {
@@ -13,7 +13,13 @@
   "scripts": {
     "postinstall": "node ./postinstall.js"
   },
+  "@pattern-lab-plugin": {
+    "name": "plugin-node-data-inheritance"
+  },
   "author": "David Emanuelsen",
   "license": "MIT",
-  "homepage": "https://github.com/749/plugin-node-data-inheritance#readme"
+  "homepage": "https://github.com/749/plugin-node-data-inheritance#readme",
+  "engines": {
+    "node": ">=8.5"
+  }
 }
